# sfml-project

./: .gitignore  CMakeLists.txt
res/: blocks.map  cavern.txt  shed.txt  test.map
res/shaders/: basicFRAG.txt  basicVERT.txt
src/: Camera.h  Player.cpp  Player.h  draw_helpers.h  gl_light.h  main.cpp  util.h
